--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                 <div class="stat-label">2024年增长率</div>
             </div>
             <div class="stat-card">
-                <div class="stat-value">69.7%</div>
-                <div class="stat-label">十年总增长 (USD)</div>
+                <div class="stat-value">69.7%/94.0%</div>
+                <div class="stat-label">十年总增长 (USD/RMB)</div>
             </div>
         </div>
         
